--- a/css/typography-improvements.css
+++ b/css/typography-improvements.css
@@ -127,23 +127,29 @@ ul ul, ol ol, ul ol, ol ul {
     margin-left: 0 !important;
 }
 
-/* Content Area Alignment */
+/* Content Area Alignment - SYMMETRIC LEFT AND RIGHT PADDING */
 .info-block-w-icon {
     margin-bottom: 2em;
-    padding-left: 0 !important;
+    padding-left: 2em !important;
+    padding-right: 2em !important;
     margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .info-list-w-icon {
-    padding-left: 0 !important;
+    padding-left: 2em !important;
+    padding-right: 2em !important;
     margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .ci-text {
     text-align: justify;
     max-width: 100%;
-    padding-left: 0 !important;
+    padding-left: 2em !important;
+    padding-right: 2em !important;
     margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .ci-text p {
@@ -161,6 +167,41 @@ ul ul, ol ol, ul ol, ol ul {
     margin-left: 0 !important;
 }
 
+/* Better spacing for content boxes - SYMMETRIC ON ALL DEVICES */
+@media only screen and (min-width: 768px) {
+    .info-block-w-icon {
+        padding-left: 3em !important;
+        padding-right: 3em !important;
+    }
+    
+    .info-list-w-icon {
+        padding-left: 3em !important;
+        padding-right: 3em !important;
+    }
+    
+    .ci-text {
+        padding-left: 3em !important;
+        padding-right: 3em !important;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .info-block-w-icon {
+        padding-left: 4em !important;
+        padding-right: 4em !important;
+    }
+    
+    .info-list-w-icon {
+        padding-left: 4em !important;
+        padding-right: 4em !important;
+    }
+    
+    .ci-text {
+        padding-left: 4em !important;
+        padding-right: 4em !important;
+    }
+}
+
 /* Home Section Improvements */
 .home-content {
     padding: 2em 0;
@@ -175,8 +216,7 @@ ul ul, ol ol, ul ol, ol ul {
     line-height: 1.2 !important;
     margin-bottom: 0.5em;
     font-weight: 700;
-    letter-spacing: -0.03em;
-    white-space: nowrap;
+    letter-spacing: -0.01em;
 }
 
 .home-text h4 {
@@ -314,7 +354,6 @@ ul ul, ol ol, ul ol, ol ul {
     
     .home-text h1 {
         font-size: 2.75em !important;
-        white-space: nowrap;
     }
     
     .home-text h4 {
@@ -358,7 +397,6 @@ ul ul, ol ol, ul ol, ol ul {
     .home-text h1 {
         font-size: 1.9em !important;
         text-align: center;
-        white-space: normal;
     }
     
     .home-text h4 {
@@ -387,7 +425,6 @@ ul ul, ol ol, ul ol, ol ul {
     .home-text h1 {
         font-size: 1.6em !important;
         line-height: 1.3 !important;
-        white-space: normal;
     }
     
     h2 {
