--- a/css/typography-improvements.css
+++ b/css/typography-improvements.css
@@ -35,6 +35,7 @@ h1 {
     font-size: 2.25em;
     font-weight: 700;
     margin-top: 0;
+    letter-spacing: 0 !important;
     color: #2c3e50 !important;
 }
 
