--- a/css/typography-improvements.css
+++ b/css/typography-improvements.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     line-height: 1.3;
     margin-top: 1.5em;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.25em; /* reduced spacing */
     letter-spacing: -0.02em;
     color: #2c3e50 !important;
 }
@@ -122,7 +122,7 @@ ul ul, ol ol, ul ol, ol ul {
 /* Section Alignment Improvements - FIXED FOR DESKTOP */
 .block-title {
     margin-top: 3em;
-    margin-bottom: 0.75em;
+    margin-bottom: 0.1em; /* further reduced spacing */
     text-align: left;
     padding-left: 0 !important;
     margin-left: 0 !important;
@@ -132,7 +132,7 @@ ul ul, ol ol, ul ol, ol ul {
     font-size: 1.75em;
     font-weight: 600;
     color: #2c3e50 !important;
-    margin-bottom: 0.3em !important;
+    margin-bottom: 0.05em !important; /* further reduced spacing */
     padding-left: 0 !important;
     margin-left: 0 !important;
 }
